--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,18 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    implementation "androidx.core:core-ktx:$ktxVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodelComposeVersion"
+    implementation "androidx.activity:activity-compose:$activityComposeVersion"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.4.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.compose.material:material:$materialComposeVersion"
+    implementation "androidx.compose.animation:animation-graphics:$compose_ui_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    implementation "androidx.compose.runtime:runtime-rxjava3:$compose_ui_version"
+
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test.ext:junit:$junitExtVersion"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
@@ -85,5 +88,7 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxkotlin:$RxKotlinVersion"
     implementation "io.reactivex.rxjava3:rxandroid:$RxAndroidVersion"
     implementation "io.reactivex.rxjava3:rxjava:$RxJavaVersion"
+
+    implementation "io.coil-kt:coil-compose:2.0.0-rc01"
 
 }
